# openclaw

./: PRUNED_EXTENSIONS.md  docker-compose.dokploy.yml  pnpm-lock.yaml
.github/workflows/: sync-upstream.yml
openclaw-python/: .gitignore  README.md  pyproject.toml
openclaw-python/.github/workflows/: ci.yml  release.yml
openclaw-python/src/openclaw/: main.py
openclaw-python/src/openclaw/agent/: loop.py
openclaw-python/src/openclaw/channels/: base.py  discord.py  telegram.py
openclaw-python/src/openclaw/config/: loader.py  schema.py
openclaw-python/src/openclaw/context/: engine.py
openclaw-python/src/openclaw/migration/: hermes.py
openclaw-python/src/openclaw/models/: core.py
openclaw-python/src/openclaw/routing/: router.py  session_key.py
openclaw-python/src/openclaw/server/: gateway.py  wizard.py
openclaw-python/src/openclaw/session/: manager.py
openclaw-python/src/openclaw/skills/: loader.py
openclaw-python/src/openclaw/tools/: builtin.py  registry.py
openclaw-python/tests/: test_agent_loop.py  test_cli.py  test_config.py  test_context_engine.py  test_migration.py  test_router.py  test_server.py  test_session_key.py  test_session_manager.py  test_skills_loader.py  test_tools.py
openclaw-python/tests/channels/: test_base.py  test_discord.py  test_discord_live.py  test_telegram.py
openclaw-python/tests/integration/: conftest.py  test_config_server.py  test_message_pipeline.py  test_migration_roundtrip.py  test_skills_in_prompt.py  test_tool_chain.py
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md
(+8 files in other folders)
