[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw"
version = "0.1.0"
description = "OpenClaw gateway — Python implementation"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "structlog>=24.1",
    "python-telegram-bot>=21.0",
    "discord.py>=2.4",
    "duckduckgo-search>=6.0",
    "anyio>=4.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[project.scripts]
claw = "openclaw.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["telegram.*", "discord.*", "duckduckgo_search.*", "yaml.*"]
ignore_missing_imports = true
